syntax = "proto3";

package nodes;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


service Nodes {
    rpc List (ListNodesRequest) returns (NodesList) {
        option (google.api.http) = {
            get: "/v1/scenes/{scene_id}/nodes"
        };
    }
    rpc Get (GetNodeRequest) returns (Node) {
        option (google.api.http) = {
            get: "/v1/scenes/{scene_id}/nodes/{node_id}"
        };
    }
    rpc Create (CreateNodeRequest) returns (Node) {
        option (google.api.http) = {
            post: "/v1/scenes/{scene_id}/nodes"
            body: "node"
        };
    }
    rpc Update (UpdateNodeRequest) returns (Node) {
        option (google.api.http) = {
            put: "/v1/scenes/{scene_id}/nodes/{node_id}"
            body: "node"
        };
    }
    rpc Delete (DeleteNodeRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/scenes/{scene_id}/nodes/{node_id}"
        };
    }
}

// Types
message Node {
    int64 id = 1;
}

message NodesList {
    repeated Node nodes = 1;
}

// Requests
message ListNodesRequest {
    int64 scene_id = 1;
}

message GetNodeRequest {
    int64 scene_id = 1;
    int64 node_id = 2;
}

message CreateNodeRequest {
    int64 scene_id = 1;
    Node node = 2;
}

message UpdateNodeRequest {
    int64 scene_id = 1;
    int64 node_id = 2;
    Node node = 3;
}

message DeleteNodeRequest {
    int64 scene_id = 1;
    int64 node_id = 2;
}
